--- a/portfolio01/css/style.css
+++ b/portfolio01/css/style.css
@@ -1,10 +1,12 @@
 * {
   padding: 0;
-
+  margin: 0;
   list-style: none;
 }
 body {
   width: 100%;
+  height: auto;
+  overflow-x: hidden;
 }
 h1 {
   font-size: 95px;
@@ -15,7 +17,6 @@ a {
   color: #000;
 }
 #wrap {
-  width: 1920px;
 }
 .container {
   margin: 0 auto;
@@ -53,6 +54,7 @@ nav {
   line-height: 54px;
   font-size: 20px;
   border-radius: 30px;
+  margin-bottom: 10px;
 }
 section {
   width: 100%;
@@ -70,5 +72,6 @@ section ul li a {
 .footer {
   width: 100%;
   text-align: center;
+  margin-top: 50px;
   font-size: 25px;
 }
