--- a/portfolio01/css/style.css
+++ b/portfolio01/css/style.css
@@ -6,26 +6,36 @@
 
 body {
   width: 100%;
-  height: 100vh;
-  /* width: 100%;
-  height: auto; */
-  overflow-x: hidden;
-  color: #333;
-  background: radial-gradient(
-      circle at 50% 0,
+  /* height: 100vh;
+  width: 100%; */
+  height: auto;
+  /* overflow-x: hidden; */
+  color: #000;
+  /* background: radial-gradient(circle farthest-corner at center center, #ee2fee, #400f4e); */
+  background: radial-gradient(circle at 50% 0,
       rgba(255, 0, 0, 0.5),
-      rgba(255, 0, 0, 0) 70.71%
-    ),
-    radial-gradient(
-      circle at 6.7% 75%,
+      rgba(255, 0, 0, 0) 70.71%),
+    radial-gradient(circle at 6.7% 75%,
       rgba(0, 0, 255, 0.5),
-      rgba(0, 0, 255, 0) 70.71%
-    ),
-    radial-gradient(
-      circle at 93.3% 75%,
+      rgba(0, 0, 255, 0) 70.71%),
+    radial-gradient(circle at 93.3% 75%,
       rgba(0, 255, 0, 0.5),
-      rgba(0, 255, 0, 0) 70.71%
-    );
+      rgba(0, 255, 0, 0) 70.71%);
+
+}
+
+#webgl {
+  /* position: fixed;
+  left: 0;
+  top: 0; */
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: -1;
+  width: 100%;
+  overflow: hidden;
+  /* background: radial-gradient(circle farthest-corner at center center, #071021, #19324A); */
+  /* background: radial-gradient(circle farthest-corner at center center, #ee2fee, #400f4e); */
 }
 
 h1 {
@@ -39,8 +49,7 @@ a {
   color: #000;
 }
 
-#wrap {
-}
+#wrap {}
 
 .container {
   margin: 0 auto;
@@ -56,8 +65,7 @@ nav {
   width: 100%;
 }
 
-nav ul li {
-}
+nav ul li {}
 
 .about {
   position: absolute;
@@ -67,12 +75,11 @@ nav ul li {
 }
 
 .menu {
-  width: 50%;
+  width: 60%;
   margin-top: 143px;
 }
 
-.menu ul {
-}
+.menu ul {}
 
 .menu ul li {
   list-style: none;
@@ -89,6 +96,14 @@ nav ul li {
   font-size: 20px;
   border-radius: 30px;
   margin-bottom: 10px;
+  transition: all .5s ease;
+
+}
+
+.menu ul li a:hover {
+  background-color: #fff;
+
+
 }
 
 section {
@@ -96,8 +111,7 @@ section {
   margin-top: 100px;
 }
 
-section ul {
-}
+section ul {}
 
 section ul li {
   display: inline;
@@ -107,6 +121,164 @@ section ul li a {
   font-size: 70px;
   display: inline-block;
 }
+
+span {
+  width: 150px;
+  background-color: #fff;
+  font-size: 20px;
+  position: absolute;
+  top: -10px;
+  right: 0;
+  text-align: center;
+  border-radius: 30px;
+  opacity: 0;
+  transition: all .5s ease;
+}
+
+.font01 a {
+  position: relative;
+}
+
+.font01 a:hover span {
+  opacity: 1;
+}
+
+.font02 a {
+  position: relative;
+}
+
+.font02 a:hover span {
+  opacity: 1;
+}
+
+.font03 a {
+  position: relative;
+}
+
+.font03 a:hover span {
+  opacity: 1;
+}
+
+.font04 a {
+  position: relative;
+}
+
+.font04 a:hover span {
+  opacity: 1;
+}
+
+.font05 a {
+  position: relative;
+}
+
+.font05 a:hover span {
+  opacity: 1;
+}
+
+.font06 a {
+  position: relative;
+}
+
+.font06 a:hover span {
+  opacity: 1;
+}
+
+.font07 a {
+  position: relative;
+}
+
+.font07 a:hover span {
+  opacity: 1;
+}
+
+.font08 a {
+  position: relative;
+}
+
+.font08 a:hover span {
+  opacity: 1;
+}
+
+.font09 a {
+  position: relative;
+}
+
+.font09 a:hover span {
+  opacity: 1;
+}
+
+.font10 a {
+  position: relative;
+}
+
+.font10 a:hover span {
+  opacity: 1;
+}
+
+.font11 a {
+  position: relative;
+}
+
+.font11 a:hover span {
+  opacity: 1;
+}
+
+.font12 a {
+  position: relative;
+}
+
+.font12 a:hover span {
+  opacity: 1;
+}
+
+.font13 a {
+  position: relative;
+}
+
+.font13 a:hover span {
+  opacity: 1;
+}
+
+.font14 a {
+  position: relative;
+}
+
+.font14 a:hover span {
+  opacity: 1;
+}
+
+.font15 a {
+  position: relative;
+}
+
+.font15 a:hover span {
+  opacity: 1;
+}
+
+.font16 a {
+  position: relative;
+}
+
+.font16 a:hover span {
+  opacity: 1;
+}
+
+.font17 a {
+  position: relative;
+}
+
+.font17 a:hover span {
+  opacity: 1;
+}
+
+.font18 a {
+  position: relative;
+}
+
+.font18 a:hover span {
+  opacity: 1;
+}
+
 
 .footer {
   width: 100%;
@@ -144,5 +316,9 @@ section ul li a {
   section ul li a {
     font-size: 30px;
     display: inline-block;
+  }
+
+  section ul li a span {
+    display: none;
   }
 }
