--- a/portfolio01/css/style.css
+++ b/portfolio01/css/style.css
@@ -6,22 +6,26 @@
 
 body {
   width: 100%;
-  /* height: 100vh;
-  width: 100%; */
-  height: auto;
+  height: 100vh;
+  /* height: auto; */
   /* overflow-x: hidden; */
   color: #000;
   /* background: radial-gradient(circle farthest-corner at center center, #ee2fee, #400f4e); */
-  background: radial-gradient(circle at 50% 0,
+  background: radial-gradient(
+      circle at 50% 0,
       rgba(255, 0, 0, 0.5),
-      rgba(255, 0, 0, 0) 70.71%),
-    radial-gradient(circle at 6.7% 75%,
+      rgba(255, 0, 0, 0) 70.71%
+    ),
+    radial-gradient(
+      circle at 6.7% 75%,
       rgba(0, 0, 255, 0.5),
-      rgba(0, 0, 255, 0) 70.71%),
-    radial-gradient(circle at 93.3% 75%,
+      rgba(0, 0, 255, 0) 70.71%
+    ),
+    radial-gradient(
+      circle at 93.3% 75%,
       rgba(0, 255, 0, 0.5),
-      rgba(0, 255, 0, 0) 70.71%);
-
+      rgba(0, 255, 0, 0) 70.71%
+    );
 }
 
 #webgl {
@@ -33,6 +37,7 @@ body {
   top: 0;
   z-index: -1;
   width: 100%;
+  /* height: 100vh; */
   overflow: hidden;
   /* background: radial-gradient(circle farthest-corner at center center, #071021, #19324A); */
   /* background: radial-gradient(circle farthest-corner at center center, #ee2fee, #400f4e); */
@@ -49,7 +54,8 @@ a {
   color: #000;
 }
 
-#wrap {}
+#wrap {
+}
 
 .container {
   margin: 0 auto;
@@ -65,14 +71,15 @@ nav {
   width: 100%;
 }
 
-nav ul li {}
+nav ul li {
+}
 
 .about {
   position: absolute;
   top: 0;
   right: 0;
   font-size: 90px;
-  transition: all .5s ease;
+  transition: all 0.5s ease;
 }
 
 .about a:hover {
@@ -84,7 +91,8 @@ nav ul li {}
   margin-top: 143px;
 }
 
-.menu ul {}
+.menu ul {
+}
 
 .menu ul li {
   list-style: none;
@@ -101,14 +109,11 @@ nav ul li {}
   font-size: 20px;
   border-radius: 30px;
   margin-bottom: 10px;
-  transition: all .5s ease;
-
+  transition: all 0.5s ease;
 }
 
 .menu ul li a:hover {
-  background-color: rgba(252, 247, 247, .5);
-
-
+  background-color: rgba(252, 247, 247, 0.5);
 }
 
 section {
@@ -116,7 +121,8 @@ section {
   margin-top: 100px;
 }
 
-section ul {}
+section ul {
+}
 
 section ul li {
   display: inline;
@@ -129,7 +135,7 @@ section ul li a {
 
 span {
   width: 150px;
-  background-color: rgba(252, 247, 247, .5);
+  background-color: rgba(252, 247, 247, 0.5);
   font-size: 20px;
   position: absolute;
   top: -10px;
@@ -137,7 +143,7 @@ span {
   text-align: center;
   border-radius: 30px;
   opacity: 0;
-  transition: all .5s ease;
+  transition: all 0.5s ease;
 }
 
 .font01 a {
@@ -283,7 +289,6 @@ span {
 .font18 a:hover span {
   opacity: 1;
 }
-
 
 .footer {
   width: 100%;
