--- a/portfolio01/css/style.css
+++ b/portfolio01/css/style.css
@@ -4,6 +4,99 @@
   list-style: none;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@900&display=swap');
+
+.font01 {
+  font-family: 'Libre Franklin', sans-serif;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Croissant+One&display=swap');
+
+.font02 {
+  font-family: 'Croissant One', cursive;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+
+.font03 {
+  font-family: 'Roboto', sans-serif;
+}
+
+@import url('https://webfontworld.github.io/nongshim/Ansungtangmyun.css');
+
+.font04 {
+  font-family: 'Ansungtangmyun';
+}
+
+@import url('https://webfontworld.github.io/score/SCoreDream.css');
+
+.font05 {
+  font-family: 'SCoreDream';
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Infant:wght@300;400;500;600;700&display=swap');
+
+.font06 {
+  font-family: 'Cormorant Infant', serif;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Codystar:wght@300;400&display=swap');
+
+.font07 {
+  font-family: 'Codystar', cursive;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Nixie+One&display=swap');
+
+.font08 {
+  font-family: 'Nixie One', cursive;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap');
+
+.font09 {
+  font-family: 'Fredericka the Great', cursive;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Infant:wght@300;400;500;600;700&display=swap');
+
+.font10 {
+  font-family: 'Cormorant Infant', serif;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&display=swap');
+
+.font11 {
+  font-family: 'Courier Prime', monospace;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Corben:wght@400;700&display=swap');
+
+.font12 {
+  font-family: 'Corben', cursive;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Rasa:wght@300;400;500;600;700&display=swap');
+
+.font13 {
+  font-family: 'Rasa', serif;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap');
+
+.font14 {
+  font-family: 'Special Elite', cursive;
+}
+
+.font15 {}
+
+.font16 {}
+
+.font17 {}
+
+.font18 {}
+
+
 body {
   width: 100%;
   height: 100vh;
@@ -11,21 +104,15 @@ body {
   /* overflow-x: hidden; */
   color: #000;
   /* background: radial-gradient(circle farthest-corner at center center, #ee2fee, #400f4e); */
-  background: radial-gradient(
-      circle at 50% 0,
+  background: radial-gradient(circle at 50% 0,
       rgba(255, 0, 0, 0.5),
-      rgba(255, 0, 0, 0) 70.71%
-    ),
-    radial-gradient(
-      circle at 6.7% 75%,
+      rgba(255, 0, 0, 0) 70.71%),
+    radial-gradient(circle at 6.7% 75%,
       rgba(0, 0, 255, 0.5),
-      rgba(0, 0, 255, 0) 70.71%
-    ),
-    radial-gradient(
-      circle at 93.3% 75%,
+      rgba(0, 0, 255, 0) 70.71%),
+    radial-gradient(circle at 93.3% 75%,
       rgba(0, 255, 0, 0.5),
-      rgba(0, 255, 0, 0) 70.71%
-    );
+      rgba(0, 255, 0, 0) 70.71%);
 }
 
 #webgl {
@@ -54,8 +141,7 @@ a {
   color: #000;
 }
 
-#wrap {
-}
+#wrap {}
 
 .container {
   margin: 0 auto;
@@ -71,8 +157,7 @@ nav {
   width: 100%;
 }
 
-nav ul li {
-}
+nav ul li {}
 
 .about {
   position: absolute;
@@ -91,8 +176,7 @@ nav ul li {
   margin-top: 143px;
 }
 
-.menu ul {
-}
+.menu ul {}
 
 .menu ul li {
   list-style: none;
@@ -121,8 +205,7 @@ section {
   margin-top: 100px;
 }
 
-section ul {
-}
+section ul {}
 
 section ul li {
   display: inline;
