--- a/portfolio01/css/style.css
+++ b/portfolio01/css/style.css
@@ -1,100 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+
 * {
   padding: 0;
   margin: 0;
   list-style: none;
 }
-
-@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@900&display=swap');
-
-.font01 {
-  font-family: 'Libre Franklin', sans-serif;
-}
-
-@import url('https://fonts.googleapis.com/css2?family=Croissant+One&display=swap');
-
-.font02 {
-  font-family: 'Croissant One', cursive;
-}
-
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
-
-.font03 {
-  font-family: 'Roboto', sans-serif;
-}
-
-@import url('https://webfontworld.github.io/nongshim/Ansungtangmyun.css');
-
-.font04 {
-  font-family: 'Ansungtangmyun';
-}
-
-@import url('https://webfontworld.github.io/score/SCoreDream.css');
-
-.font05 {
-  font-family: 'SCoreDream';
-}
-
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Infant:wght@300;400;500;600;700&display=swap');
-
-.font06 {
-  font-family: 'Cormorant Infant', serif;
-}
-
-@import url('https://fonts.googleapis.com/css2?family=Codystar:wght@300;400&display=swap');
-
-.font07 {
-  font-family: 'Codystar', cursive;
-}
-
-@import url('https://fonts.googleapis.com/css2?family=Nixie+One&display=swap');
-
-.font08 {
-  font-family: 'Nixie One', cursive;
-}
-
-@import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap');
-
-.font09 {
-  font-family: 'Fredericka the Great', cursive;
-}
-
-@import url('https://fonts.googleapis.com/css2?family=Cormorant+Infant:wght@300;400;500;600;700&display=swap');
-
-.font10 {
-  font-family: 'Cormorant Infant', serif;
-}
-
-@import url('https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&display=swap');
-
-.font11 {
-  font-family: 'Courier Prime', monospace;
-}
-
-@import url('https://fonts.googleapis.com/css2?family=Corben:wght@400;700&display=swap');
-
-.font12 {
-  font-family: 'Corben', cursive;
-}
-
-@import url('https://fonts.googleapis.com/css2?family=Rasa:wght@300;400;500;600;700&display=swap');
-
-.font13 {
-  font-family: 'Rasa', serif;
-}
-
-@import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap');
-
-.font14 {
-  font-family: 'Special Elite', cursive;
-}
-
-.font15 {}
-
-.font16 {}
-
-.font17 {}
-
-.font18 {}
 
 
 body {
@@ -116,14 +26,15 @@ body {
 }
 
 #webgl {
-  /* position: fixed;
-  left: 0;
-  top: 0; */
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
+  /* position: absolute;
+  left: 0;
+  top: 0; */
   z-index: -1;
   width: 100%;
+  height: 100vh;
   /* height: 100vh; */
   overflow: hidden;
   /* background: radial-gradient(circle farthest-corner at center center, #071021, #19324A); */
@@ -131,21 +42,26 @@ body {
 }
 
 h1 {
-  font-size: 95px;
-  margin-top: 75px;
+  font-weight: normal;
+  font-size: 6vw;
+  margin-top: 70px;
+  font-weight: 100;
 }
 
 a {
   display: block;
   text-decoration: none;
   color: #000;
+  font-family: 'Quicksand', sans-serif;
+
 }
 
 #wrap {}
 
 .container {
   margin: 0 auto;
-  margin: 0 40px 0 40px;
+  width: 95%;
+  /* margin: 0 40px 0 40px; */
 }
 
 .header {
@@ -163,8 +79,8 @@ nav ul li {}
   position: absolute;
   top: 0;
   right: 0;
-  font-size: 90px;
-  transition: all 0.5s ease;
+  font-size: 3vw;
+  /* transition: all 0.5s ease; */
 }
 
 .about a:hover {
@@ -173,7 +89,8 @@ nav ul li {}
 
 .menu {
   width: 60%;
-  margin-top: 143px;
+  padding-top: 20vh;
+  padding-bottom: 5vw;
 }
 
 .menu ul {}
@@ -191,6 +108,7 @@ nav ul li {}
   text-align: center;
   line-height: 54px;
   font-size: 20px;
+  font-weight: 500;
   border-radius: 30px;
   margin-bottom: 10px;
   transition: all 0.5s ease;
@@ -200,20 +118,22 @@ nav ul li {}
   background-color: rgba(252, 247, 247, 0.5);
 }
 
-section {
+.section {
   width: 100%;
   margin-top: 100px;
+  position: relative;
 }
 
-section ul {}
+.section ul {}
 
-section ul li {
+.section ul li {
   display: inline;
 }
 
-section ul li a {
-  font-size: 70px;
+.section ul li a {
+  font-size: 4vw;
   display: inline-block;
+  padding-right: 2%;
 }
 
 span {
@@ -227,6 +147,58 @@ span {
   border-radius: 30px;
   opacity: 0;
   transition: all 0.5s ease;
+}
+
+.modal {
+  width: 80%;
+  height: 80%;
+  background: rgba(211,
+      205,
+      190,
+      0.7);
+  backdrop-filter: blur(10px);
+  position: fixed;
+  top: 0%;
+  left: 10%;
+  z-index: 1000;
+  font-family: "BMJua";
+  border-radius: 20px;
+  padding: 2%;
+  transition: all 600ms cubic-bezier(0.86, 0, 0.07, 1);
+}
+
+.modal h3 {
+  line-height: 1;
+  font-size: 30px;
+  margin-bottom: 30px;
+}
+
+.modal .desc {}
+
+.modal .desc .left {
+  width: 50%;
+  display: flex;
+
+}
+
+.modal .desc .left img {
+  border-radius: 20px;
+  width: 100%;
+
+
+}
+
+.modal .desc .right {
+  width: 47%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.modal .close {
+  font-size: 20px;
+  position: absolute;
+  top: 30px;
+  right: 20px;
 }
 
 .font01 a {
@@ -385,26 +357,25 @@ span {
 }
 
 @media (max-width: 959px) {
-  .about {
+  /* .about {
     position: absolute;
-    top: 120px;
+    top: 20%;
     left: 0;
-    font-size: 90px;
-  }
+
+  } */
 }
 
 @media (max-width: 613px) {
   h1 {
-    font-size: 50px;
     margin-top: 30px;
   }
 
-  .about {
+  /* .about {
     position: absolute;
-    top: 120px;
+    top: 100px;
     left: 0;
-    font-size: 30px;
-  }
+
+  } */
 
   section ul li a {
     font-size: 30px;
