--- a/portfolio01/css/style.css
+++ b/portfolio01/css/style.css
@@ -158,13 +158,18 @@ span {
       0.7);
   backdrop-filter: blur(10px);
   position: fixed;
-  top: 0%;
+  top: 10%;
+  /* top: 100%; */
   left: 10%;
-  z-index: 1000;
+  z-index: 1;
   font-family: "BMJua";
   border-radius: 20px;
   padding: 2%;
   transition: all 600ms cubic-bezier(0.86, 0, 0.07, 1);
+}
+
+.section>ul>li .modal.open {
+  top: 10%;
 }
 
 .modal h3 {
