--- a/portpolio02/css/style.css
+++ b/portpolio02/css/style.css
@@ -72,10 +72,9 @@ nav a {
   text-transform: uppercase;
 }
 
-.keyword {
-}
+.keyword {}
 
-.keyword > div {
+.keyword>div {
   font-size: 3vw;
   display: inline-block;
   margin-right: 2vw;
@@ -83,7 +82,7 @@ nav a {
   position: relative;
 }
 
-.keyword > div .modal {
+.keyword>div .modal {
   background: rgba(211, 205, 190, 0.7);
   backdrop-filter: blur(10px);
   width: 80%;
@@ -98,19 +97,13 @@ nav a {
   transition: all 600ms cubic-bezier(0.86, 0, 0.07, 1);
 }
 
-.keyword > div .modal h3 {
+.keyword>div .modal h3 {
   line-height: 1;
   font-size: 30px;
   margin-bottom: 30px;
 }
 
-/* webstandard */
-.keyword .webstandard .modal .desc .left {
-  width: 100%;
-  height: 500px;
-  overflow: auto;
-}
-
+/* 스크롤 */
 /* .class {
     width: 100px;
     height: 100px;
@@ -121,7 +114,7 @@ nav a {
  */
 
 .left::-webkit-scrollbar {
-  width: 5px;
+  width: 8px;
   /*스크롤바의 너비*/
 }
 
@@ -141,9 +134,17 @@ nav a {
   /*스크롤바 트랙 안쪽 그림자*/
 }
 
+/* webstandard */
+.keyword .webstandard .modal .desc .left {
+  width: 100%;
+  height: 500px;
+  overflow: auto;
+}
+
 .keyword .webstandard .modal .desc .right {
   width: 100%;
   font-size: 16px;
+  margin-top: 30px;
 }
 
 /* photoshop_website */
@@ -183,17 +184,17 @@ nav a {
 }
 
 /* banner_design03 */
-.keyword .banner_design03 .modal .desc {
-  display: flex;
-  justify-content: space-between;
-}
+.keyword .banner_design03 .modal .desc {}
 
 .keyword .banner_design03 .modal .desc .left {
-  width: 43%;
+  width: 100%;
+
+
+
 }
 
 .keyword .banner_design03 .modal .desc .right {
-  width: 45%;
+  width: 100%;
   font-size: 16px;
 }
 
@@ -213,54 +214,131 @@ nav a {
 }
 
 /* img */
-.keyword > div .modal .desc .left img {
+.keyword>div .modal .desc .left img {
   border-radius: 10px;
-  /* padding-right: 2%; */
-  margin-bottom: 30px;
 }
 
-.webstandard > .modal > .desc > .left img {
+.webstandard>.modal>.desc>.left img {
   width: 100%;
 }
 
-.banner_design03 > .modal > .desc > .left img {
-  width: 78%;
+.banner_design01>.modal>.desc>.left img {
+  margin-bottom: 5px;
 }
 
-.Illustrator_icon > .modal > .desc > .left img {
+.banner_design02>.modal>.desc>.left img {
+  margin-bottom: 5px;
+}
+
+.banner_design03>.modal>.desc>.left img {
+  width: 47%;
+  margin-bottom: 5px;
+  margin-right: 5px;
+  display: inline;
+}
+
+.banner_design03>.modal>.desc>.left img:last-child {
+  width: 95%;
+}
+
+.Illustrator_icon>.modal>.desc>.left img {
   width: 90%;
 }
 
-.keyword > div .modal .close {
+.keyword>div .modal .close {
   position: absolute;
   right: 30px;
   top: 20px;
   font-size: 20px;
 }
 
-.keyword > div .modal .site_view {
-  position: absolute;
-  right: 100px;
-  top: 600px;
+/* bot */
+.bot {
+  width: 100%;
+  text-align: right;
+
+}
+
+.bot .site_view {
+  width: 70px;
   font-size: 13px;
   color: #fff;
   font-family: "Quicksand";
+  text-align: center;
+  position: relative;
+
 }
 
-.keyword > div .modal .code {
-  position: absolute;
-  right: 30px;
-  top: 600px;
+.bot .code {
+  width: 58px;
   font-size: 13px;
   color: #fff;
   font-family: "Quicksand";
+  text-align: center;
+  position: relative;
+
 }
 
-.keyword > div.open .modal {
+/* site code line*/
+.bot .site_view:before,
+.bot .site_view:after {
+  content: "";
+  border-bottom: solid 1px #fff;
+  position: absolute;
+  bottom: 0px;
+  width: 0;
+}
+
+.bot .code:before,
+.bot .code:after {
+  content: "";
+  border-bottom: solid 1px #fff;
+  position: absolute;
+  bottom: 0px;
+  width: 0;
+}
+
+.bot .code:before {
+  left: 0;
+}
+
+.bot .code:after {
+  right: 0;
+}
+
+.bot .site_view:before {
+  left: 0;
+}
+
+.bot .site_view:after {
+  right: 0;
+}
+
+.bot .site_view:hover:before,
+.bot .site_view:hover:after {
+  width: 50%;
+}
+
+.bot .code:hover:before,
+.bot .code:hover:after {
+  width: 50%;
+}
+
+.bot .site_view:before,
+.bot .site_view:after {
+  transition: all 0.2s ease;
+}
+
+.bot .code:before,
+.bot .code:after {
+  transition: all 0.2s ease;
+}
+
+.keyword>div.open .modal {
   top: 10%;
 }
 
-.keyword > div span {
+.keyword>div span {
   position: absolute;
   top: 0px;
   left: 50%;
@@ -272,13 +350,13 @@ nav a {
   transition: all 0.3s ease-in-out;
 }
 
-.keyword > div:hover span {
+.keyword>div:hover span {
   transform: translateX(-50%) translateY(-15px);
   opacity: 1;
 }
 
-.keyword > div a:before,
-.keyword > div a:after {
+.keyword>div a:before,
+.keyword>div a:after {
   content: "";
   border-bottom: solid 2px #000;
   position: absolute;
@@ -286,75 +364,20 @@ nav a {
   width: 0;
 }
 
-.keyword > div a:before {
+.keyword>div a:before {
   left: 0;
 }
 
-.keyword > div a:after {
+.keyword>div a:after {
   right: 0;
 }
 
-.keyword > div a:hover:before,
-.keyword > div a:hover:after {
+.keyword>div a:hover:before,
+.keyword>div a:hover:after {
   width: 50%;
 }
 
-.keyword > div a:before,
-.keyword > div a:after {
-  transition: all 0.2s ease;
-}
-
-/* site code */
-.keyword > div .site_view:before,
-.keyword > div .site_view:after {
-  content: "";
-  border-bottom: solid 1px #fff;
-  position: absolute;
-  bottom: 0;
-  width: 0;
-}
-
-.keyword > div .code:before,
-.keyword > div .code:after {
-  content: "";
-  border-bottom: solid 1px #fff;
-  position: absolute;
-  bottom: 0;
-  width: 0;
-}
-
-.keyword > div .code:before {
-  left: 0;
-}
-
-.keyword > div .code:after {
-  right: 0;
-}
-
-.keyword > div .site_view:before {
-  left: 0;
-}
-
-.keyword > div .site_view:after {
-  right: 0;
-}
-
-.keyword > div .site_view:hover:before,
-.keyword > div .site_view:hover:after {
-  width: 50%;
-}
-
-.keyword > div .code:hover:before,
-.keyword > div .code:hover:after {
-  width: 50%;
-}
-
-.keyword > div .site_view:before,
-.keyword > div .site_view:after {
-  transition: all 0.2s ease;
-}
-
-.keyword > div .code:before,
-.keyword > div .code:after {
+.keyword>div a:before,
+.keyword>div a:after {
   transition: all 0.2s ease;
 }
