--- a/site1/assets/css/header.css
+++ b/site1/assets/css/header.css
@@ -3,6 +3,7 @@
 
     margin: 0 auto;
 }
+
 .header__inner {
     width: 100%;
     height: 70px;
@@ -18,6 +19,7 @@
     z-index: 10000;
     background: #fff;
 }
+
 .header__logo {
     width: 10%;
     font-size: 30px;
@@ -25,32 +27,39 @@
 
     text-transform: uppercase;
 }
+
 .header__logo em {
     padding-left: 10px;
     font-size: 18px;
     font-weight: 400;
 }
+
 .header__menu {
     width: 60%;
     text-align: center;
 }
+
 .header__menu li {
     display: inline;
 }
+
 .header__menu li a {
     padding: 13px 30px;
     margin: 0 5px;
     transition: background-color 0.3s;
 }
+
 .header__menu li a:hover {
     background-color: #f1f1f1;
     border-radius: 5px;
 }
+
 .header__member {
     width: 20%;
     text-align: right;
     padding-right: 15px;
 }
+
 .header__member a {
     font-size: 16px;
     border: 1px solid #000;
@@ -58,10 +67,12 @@
     border-radius: 50px;
     transition: all 0.3s;
 }
+
 .header__member a:hover {
     background-color: #000;
     color: #fff;
 }
+
 .header__ham {
     position: absolute;
     right: 10px;
@@ -72,6 +83,7 @@
     display: none;
     cursor: pointer;
 }
+
 .header__ham span {
     display: block;
     background: #000;
@@ -82,24 +94,30 @@
     margin-top: 5px;
     transition: 0.25s margin 0.25s, 0.25s transform;
 }
+
 .header__ham span:nth-child(1) {
     margin-top: 17px;
 }
+
 .header__ham.active span {
     transition: 0.25s margin, 0.25s transform 0.25s;
 }
+
 .header__ham.active span:nth-child(1) {
     margin-top: 25px;
     margin-bottom: -7px;
     transform: rotate(45deg);
 }
+
 .header__ham.active span:nth-child(2) {
     transform: rotate(45deg);
 }
+
 .header__ham.active span:nth-child(3) {
     margin-top: -2px;
     transform: rotate(135deg);
 }
+
 /* media */
 @media (max-width: 1300px) {
     .header__menu {
@@ -142,5 +160,11 @@
 
     .header__logo {
         width: 60%;
+    }
+}
+
+@media (max-width: 400px) {
+    .header__member a {
+        display: none;
     }
 }
