--- a/portpolio02/css/style.css
+++ b/portpolio02/css/style.css
@@ -95,6 +95,7 @@ nav a {
   border-radius: 20px;
   padding: 2%;
   transition: all 600ms cubic-bezier(0.86, 0, 0.07, 1);
+
 }
 
 .keyword>div .modal h3 {
@@ -114,7 +115,7 @@ nav a {
  */
 
 .left::-webkit-scrollbar {
-  width: 8px;
+  width: 10px;
   /*스크롤바의 너비*/
 }
 
@@ -142,9 +143,12 @@ nav a {
 }
 
 .keyword .webstandard .modal .desc .right {
-  width: 100%;
+  width: 60%;
   font-size: 16px;
   margin-top: 30px;
+  /* display: flex;
+  justify-content: space-between; */
+
 }
 
 /* photoshop_website */
@@ -256,6 +260,11 @@ nav a {
 .bot {
   width: 100%;
   text-align: right;
+  padding-bottom: 10px;
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+
 
 }
 
