--- a/portfolio02/css/style.css
+++ b/portfolio02/css/style.css
@@ -374,7 +374,7 @@ nav a {
   right: 30px;
 }
 
-.desc .bot .site_view {
+.desc>.bot>.site_view {
   width: 85px;
   height: 30px;
   line-height: 30px;
@@ -386,7 +386,7 @@ nav a {
   background-color: #333;
 }
 
-.desc .bot .code {
+.desc>.bot>.code {
   width: 73px;
   height: 30px;
   line-height: 30px;
