--- a/responsive web/css/style.css
+++ b/responsive web/css/style.css
@@ -261,7 +261,7 @@ body {
 .column .col_tit {
   font-size: 20px;
   color: #2f7fa6;
-  background-position: 5px;
+  padding-bottom: 5px;
 }
 .column .col_desc {
   border-bottom: 1px dashed #dbdbdb;
@@ -318,6 +318,7 @@ body {
 }
 /* 게시판 */
 .notice1 {
+  position: relative;
 }
 .notice1 h5 {
   font-size: 14px;
@@ -349,9 +350,45 @@ body {
   text-transform: uppercase;
   font-size: 10px;
 }
-
+/* 게시판2 */
 .notice2 {
+  position: relative;
 }
+.notice2 h5 {
+  font-size: 14px;
+  color: #2f7fa6;
+  padding-bottom: 5px;
+}
+.notice2 li {
+  position: relative;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  padding-left: 8px;
+  padding-bottom: 5px;
+  max-height: 40px;
+}
+.notice2 li:before {
+  content: "";
+  border-radius: 50%;
+  width: 3px;
+  height: 3px;
+  background: #449ce2;
+  position: absolute;
+  left: 0;
+  top: 6px;
+}
+.notice2 .more {
+  position: absolute;
+  right: 0;
+  top: 3px;
+  color: #878787;
+  text-transform: uppercase;
+  font-size: 10px;
+}
+
 @media (max-width: 1220px) {
   .container {
     width: 100%;
