--- a/responsive web/css/reset.css
+++ b/responsive web/css/reset.css
@@ -79,6 +79,16 @@ h6 {
   font-weight: normal;
 }
 
+/* 버튼초기화 */
+button {
+  border: 0;
+}
+
+/* 반응형이미지 */
+img {
+  width: 100%;
+}
+
 /* IR 효과 */
 .ir_pm {
   display: block;
@@ -103,6 +113,20 @@ h6 {
   line-height: 0;
   text-indent: -9999px;
 } /* 대체 텍스트가 아닌 접근성을 위한 숨김 텍스트를 제공할 때 */
+
+/* clearfix */
+.clearfix {
+  *zoom: 1;
+}
+.clearfix:before,
+.clearfix:after {
+  display: block;
+  content: "";
+  line-height: 0;
+}
+.clearfix:after {
+  clear: both;
+}
 
 * margin,
 padding */ .mt10 {
