--- a/clone/css/style.css
+++ b/clone/css/style.css
@@ -77,7 +77,6 @@
 }
 
 /* header */
-.header {}
 
 .header h1 {
   float: left;
@@ -839,8 +838,6 @@
   padding: 17px;
 }
 
-.card ul {}
-
 .card ul li {
   position: relative;
   border: 1px solid #d7d7d7;
@@ -979,7 +976,7 @@
 
   .help .article.help_box1 {
     width: 49%;
-    margin-right: 2%;
+    margin-right: 1%;
   }
 
   .help .article.help_box2 {
@@ -991,6 +988,11 @@
     width: 100%;
     margin-top: 2%;
   }
+
+  .help .article {
+    height: auto;
+  }
+
 }
 
 @media (max-width: 960px) {
